Fix view overflow

--- a/frontend/src/components/search/SearchResults.css
+++ b/frontend/src/components/search/SearchResults.css
@@ -6,8 +6,8 @@
 
   overflow-y: auto;
   
-  height: 60%;
   width: 100%;
+  height: 100%;
   
   border-radius: 10px;
 }
